# radhikachain-core

./: .env.example  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  compile.sh  fix_chainparams.sh  install.sh  requirements-miner.txt
.github/workflows/: build.yml  release.yml  security.yml
contrib/docker/: .dockerignore  Dockerfile.radhika-fixed  Dockerfile.radhika-node  entrypoint.sh
doc/: MINING.md
scripts/: check-secrets.sh  install-build-deps.sh  karma-mine.py  smoke-node.sh  test-compile.sh  validate-install.sh
share/: radhika.conf.template
src/: CMakeLists.txt  clientversion.cpp  pow.h  validation.cpp
src/consensus/: karma_engine.cpp  karma_set_theory.h  tx_check.cpp
src/node/: interfaces.cpp
src/rpc/: mining.cpp
src/test/: karma_tests.cpp
